fixed labels on plots that were getting cut off, debugged and reorganized the gauges on the homepage, and changed color scheme for navbar

--- a/shiny/custom.css
+++ b/shiny/custom.css
@@ -2,3 +2,13 @@
 body {
   background-color: #F2F2F2;
 }
+
+.navbar, [data-toggle=tab] {
+  background-color:#D84742;
+  border-color:black;
+}
+.navbar-brand {
+color:#D84742;
+}
+
+
